<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Shared Photo</string>
    <string name="uploadbtn">Upload Image</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="title_activity_list_view_friends">ListViewFriendsActivity</string>
    <string name="title_activity_single_item_view">SingleItemViewActivity</string>
    <string name="first_name_label">"First Name : "</string>
    <string name="country_label">"Country : "</string>
    <string name="second_name_label">"Second Name : "</string>
    <string name="title_activity_login_signup">LoginSignupActivity</string>


</resources>