<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.androidbegin.parseimageupload.LoginActivity">

    <TextView android:text="@string/login" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_textView"
        android:textColor="#1c6dc4"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/appName_textView"
        android:layout_below="@+id/login_textView"
        android:layout_centerHorizontal="true"
        android:textColor="#1c6dc4"
        android:textSize="35sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:id="@+id/login_editText"
        android:hint="@string/login"
        android:singleLine="true"
        android:nextFocusDown="@+id/password_editText"
        android:textColorHighlight="#1c6dc4"
        android:textColorHint="#1c6dc4"
        android:textColor="#1c6dc4"
        android:background="@drawable/border_edittext"
        android:textCursorDrawable="@drawable/cursor"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:src="@drawable/share"
        android:contentDescription="@string/app_name"
        android:layout_below="@+id/appName_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/cursor"
        android:ems="10"
        android:id="@+id/password_editText"
        android:layout_below="@+id/login_editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/login_editText"
        android:layout_alignEnd="@+id/login_editText"
        android:textColorHint="#1c6dc4"
        android:background="@drawable/border_edittext"
        android:textColor="#1c6dc4"
        android:hint="@string/password" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:layout_below="@+id/password_editText" />

</RelativeLayout>
